# konsolai

./: .craftsettings.ini  .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md  dune-project  install-deps.sh  install.sh
.claude/commands/: test-heavy.md  test-light.md
.github/workflows/: build.yml
Testing/: gui-interaction-test.py  gui-lifecycle-test.py  gui-smoke-test.py  run-all-gui-tests.sh  run-isolated-gui-tests.sh
data/profiles/: Claude.profile
desktop/: CMakeLists.txt  konsolai.notifyrc  konsolai.qrc  konsolaiui.rc  org.kde.konsolai.desktop  sessionui.rc
doc/konsolai/: README.md  agents.md  budget-controls.md  implementing-providers.md  keyboard-shortcuts.md  sessions.md  testing.md  yolo-mode.md
doc/manual/: CMakeLists.txt  index.docbook
konsolai-bridge/: pyproject.toml
konsolai-bridge/konsolai_bridge/: __init__.py  auth.py  config.py  hook_listener.py  main.py  models.py  session_registry.py  setup_bridge.py  tmux.py  transcript_parser.py
konsolai-bridge/konsolai_bridge/routes/: __init__.py  sessions.py  setup.py  vehicle.py  websocket.py
konsolai-bridge/systemd/: konsolai-bridge.service
konsolai-bridge/tests/: conftest.py  test_models.py  test_sessions.py  test_setup.py  test_transcript.py  test_vehicle.py
lib/: dune  prime_factors.ml  prime_factors.mli
plans/: android-integration.md  design-notes.md  ssh-remote-sessions.md
reports/: innovation_2026-03-08.md  konsolai_2026-03-05.md
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Screen.cpp  ViewManager.cpp  Vt102Emulation.cpp  config-konsole.h.cmake  main.cpp
src/autotests/: AgentFleetProviderTest.cpp  AgentFleetProviderTest.h  AgentManagerPanelTest.cpp  AgentManagerPanelTest.h  AgentSessionLinkerTest.cpp  AgentSessionLinkerTest.h  BudgetControllerTest.cpp  BudgetControllerTest.h  CMakeLists.txt  ClaudeAgentTeamTest.cpp  ClaudeAgentTeamTest.h  ClaudeHookHandlerDetailTest.cpp  ClaudeHookHandlerDetailTest.h  ClaudeHookHandlerTest.cpp  ClaudeHookHandlerTest.h  ClaudeProcessHookEventTest.cpp  ClaudeProcessHookEventTest.h  ClaudeProcessTest.cpp  ClaudeProcessTest.h  ClaudeRemoteDiscoveryTest.cpp  ClaudeRemoteDiscoveryTest.h  ClaudeSessionRegistryTest.cpp  ClaudeSessionRegistryTest.h  ClaudeSessionStateTest.cpp  ClaudeSessionStateTest.h  ClaudeSessionWizardTest.cpp  ClaudeSessionYoloTest.cpp  ClaudeSessionYoloTest.h  ClaudeStatusWidgetTest.cpp  ClaudeTabIndicatorTest.cpp  HookCleanupRaceTest.cpp  HookCleanupRaceTest.h  KeyboardResponsivenessTest.cpp  KonsolaiSettingsTest.cpp  KonsolaiSettingsTest.h  NotificationManagerTest.cpp  NotificationManagerTest.h  OneShotControllerTest.cpp  OneShotControllerTest.h  ProfileClaudeTest.cpp  (+24 more)
src/claude/: AgentFleetProvider.cpp  AgentFleetProvider.h  AgentManagerPanel.cpp  AgentManagerPanel.h  AgentProvider.cpp  AgentProvider.h  AgentSessionLinker.cpp  AgentSessionLinker.h  BudgetController.cpp  BudgetController.h  CMakeLists.txt  ClaudeConversationPicker.cpp  ClaudeConversationPicker.h  ClaudeHookHandler.cpp  ClaudeHookHandler.h  ClaudeMenu.cpp  ClaudeMenu.h  ClaudeNotificationWidget.cpp  ClaudeNotificationWidget.h  ClaudeProcess.cpp  ClaudeProcess.h  ClaudeSession.cpp  ClaudeSession.h  ClaudeSessionRegistry.cpp  ClaudeSessionRegistry.h  ClaudeSessionState.cpp  ClaudeSessionState.h  ClaudeSessionWizard.cpp  ClaudeSessionWizard.h  ClaudeStatusWidget.cpp  ClaudeStatusWidget.h  ClaudeTabIndicator.cpp  ClaudeTabIndicator.h  KonsolaiLogging.cpp  KonsolaiLogging.h  KonsolaiSettings.cpp  KonsolaiSettings.h  NotificationManager.cpp  NotificationManager.h  OneShotController.cpp  (+12 more)
src/claude/tools/: konsolai-hook-handler.cpp
src/filterHotSpots/: SessionLinkFilter.cpp  SessionLinkFilter.h  SessionLinkHotSpot.cpp  SessionLinkHotSpot.h
src/history/: HistoryFile.cpp
src/plugins/QuickCommands/: quickcommandsplugin.cpp
src/plugins/SSHManager/: sshmanagerplugin.cpp
src/profile/: Profile.cpp  Profile.h  ProfileReader.cpp
src/session/: Session.cpp  Session.h  SessionController.cpp  SessionController.h  SessionManager.cpp
src/terminalDisplay/: TerminalDisplay.cpp  TerminalPainter.cpp
src/widgets/: TerminalDisplayAccessible.cpp  ViewContainer.cpp  ViewContainer.h
tools/gui-mcp/: README.md  pyproject.toml
tools/gui-mcp/src/konsolai_gui_mcp/: __init__.py  atspi_backend.py  backend.py  server.py  types.py  uia_backend.py
