[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "konsolai-bridge"
version = "0.1.0"
description = "REST/WebSocket bridge for Konsolai remote control — supports Android Auto and CarPlay"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-2.0-or-later"}
authors = [{name = "Struktured Labs"}]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]

[project.scripts]
konsolai-bridge = "konsolai_bridge.main:cli_main"

[tool.setuptools.packages.find]
where = ["."]
