[project]
name = "konsolai-gui-mcp"
version = "0.1.0"
description = "MCP server for GUI introspection and automation of Konsolai (Qt6/KDE)"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
# Linux: PyGObject (gi.repository.Atspi) should come from system packages:
#   sudo apt install python3-gi gir1.2-atspi-2.0
# Building from PyPI requires: sudo apt install libgirepository-2.0-dev
linux = []
windows = [
    "pywinauto>=0.6.8",
    "Pillow>=9.0.0",
]

[project.scripts]
konsolai-gui-mcp = "konsolai_gui_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/konsolai_gui_mcp"]
